--- a/app/files/templates/app/dashboard.html
+++ b/app/files/templates/app/dashboard.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <div class="container">
-        <h2>Evolución del Valor Total ($V_t$)</h2>
+        <h2>Evolución del Valor Total V<sub>t</sub></h2>
         <div class="chart-container">
             <canvas id="lineChart"></canvas>
         </div>
         
-        <h2>Distribución de activos ($w_{i,t}$)</h2>
+        <h2>Distribución de activos w<sub>i,t</sub></h2>
         <div class="chart-container">
             <canvas id="stackedAreaChart"></canvas>
         </div>
